--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.7.1",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.0.0",
@@ -45,6 +43,10 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react": "^7.31.10"
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "prettier": "^2.8.0"
   }
 }
