--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "BlogBTIX",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://matheuspalmieri.github.io/blog-btix/",
   "dependencies": {
     "@bigheads/core": "^0.3.3",
     "@emotion/react": "^11.10.5",
@@ -10,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-content-loader": "^6.2.0",
@@ -20,7 +22,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "build": "react-scripts build && cp build/index.html build/404.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
